# VidGenLab

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
.claude/: README.md  settings.json
.claude/commands/: prime.md
ai_working/: SCP_093_THEME_PLANNING.md  VALIDATION_GUIDE.md
docs/examples/: README.md
docs/examples/character_pack/: README.md
docs/examples/imagen_lab/: README.md
docs/examples/prompt_matrix/: README.md
docs/examples/prompt_rewriter/: README.md
docs/examples/ref_image_lab/: README.md
docs/examples/shot_chain/: README.md
docs/examples/simple/: README.md
examples/: .gitignore  README.md  base_template.j2  basic_prompt.txt  chain_demo.yml  matrix_demo.yml  storyboard_demo.json
examples/characters/: README.md  cyber_witch.txt  d_class_20384.txt  d_class_54493.txt  digital_monk.txt  hooded_cybermancer.txt  neon_occultist.txt  research_supervisor.txt  security_officer.txt  site_technician.txt
examples/references/: README.md  abandoned_cityscape.txt  concrete_tunnel.txt  containment_facility.txt  green_farmland.txt
src/imagen_lab/: cli.py  common.py
src/veo_lab/: ab_viewer.py  character_pack.py  common.py  prompt_matrix.py  prompt_rewriter.py  ref_image_lab.py  shot_chain.py  simple.py  storyboard.py
tests/: README.md  conftest.py  test_cli_parsing.py  test_imagen_lab_common.py  test_integration_mocks.py  test_prompt_matrix.py  test_veo_lab_common.py
tools/: build_ai_context_files.py  collect_files.py
user_prompts/: .gitignore  README.md
user_prompts/scp_093_extras/: README.md
(+9 files in other folders)
