[project]
name = "vidgenlab"
version = "0.1.0"
description = "Exploring generative AI video APIs with modular experiments"
authors = [{ name = "robotdad" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "google-genai>=0.3.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "typer>=0.12.3",
    "tqdm>=4.66.4",
    "pydantic>=2.8.2",
    "rich>=13.7.1",
    "pillow>=10.3.0",
    "streamlit>=1.36.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = ["veo_lab", "imagen_lab"]
package-dir = {"" = "src"}

[project.scripts]
imagen_lab = "imagen_lab.cli:app"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "debugpy>=1.8.14",
    "playwright>=1.54.0",
    "pyright>=1.1.403",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.10",
    "twine>=6.1.0",
]
